--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
 </head>
 
 <body>
+  <header>
+    <div class="name">
+      <h1>RAWG Games Explorer</h1>
+    </div>
+    <div class="search-bar">
+
+      <input type="text" id="searchInput" placeholder="Portal 2">
+    </div>
+    <div class="filters">
+
+      <select id="filterPlatform">
+        <option value="">Todas las plataformas</option>
+      </select>
+      <select id="filterGenre">
+        <option value="">Todos los géneros</option>
+      </select>
+      <button id="sortByName">Ordenar por Nombre</button>
+      <button id="sortByRating">Ordenar por Puntuación</button>
+    </div>
+  </header>
+  <main>
+    <div id="gamesContainer" class="cards-container"></div>
+  </main>
+
+  <!--Modal de cards-->
+  <div id="modal" class="modal hidden">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modalBody"></div>
+    </div>
+  </div>
 
   <script type="module" src="/src/js/main.js"></script>
 </body>
