--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--TODO REVISAR TAMAÑO RESPONSIVE-->
+<!--TODO REVISAR MODAL FIXED-->
 
 <head>
   <meta charset="UTF-8">
@@ -19,7 +19,8 @@
         </a>
       </div>
       <div class="favorites">
-        <a href="/src/pages/favorites.html">🖤 Fav<span class="favorites-text">oritos</span></a>
+        <a href="/src/pages/favorites.html"><img src="./public/assets/corazon.png" alt="" width="20px" height="20px">
+          Fav<span class="favorites-text">oritos</span></a>
       </div>
 
     </section>
