--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--TODO REVISAR POR QUE NO SE CENTRA EL P DE FAVORITOS VACIOS-->
 
 <head>
   <meta charset="UTF-8">
@@ -10,28 +11,32 @@
 </head>
 
 <body>
+
   <header>
-    <div class="name">
-      <a href="../index.html">
-        <h1>RAWG Games Explorer</h1>
-      </a>
-    </div>
-    <div class="search-bar">
-      <input type="text" id="searchInput" placeholder="Portal 2">
-    </div>
-    <div class="filters">
-      <select id="filterPlatform">
-        <option value="">Todas las plataformas</option>
-      </select>
-      <select id="filterGenre">
-        <option value="">Todos los géneros</option>
-      </select>
-      <button id="sortByName">Ordenar por Nombre</button>
-      <button id="sortByRating">Ordenar por Puntuación</button>
-    </div>
+    <section class="header-nav">
+      <div class="home">
+        <a href="../index.html"><img src="../../public/assets/hogar.png" alt="Home">Home</a>
+      </div>
+    </section>
+    <section class="header-filters">
+      <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Portal 2">
+      </div>
+      <div class="filters">
+        <select id="filterPlatform">
+          <option value=""><span></span>Todas las Plataformas</option>
+        </select>
+        <select id="filterGenre">
+          <option value="">Todos los Géneros</option>
+        </select>
+        <button id="sortByName">Ordenar por Nombre</button>
+        <button id="sortByRating">Ordenar por Puntuación</button>
+      </div>
+    </section>
+
   </header>
   <main>
-    <div id="favoritesContainer" class="cards-container"></div>
+    <div id="favoritesContainer" class="cards-container text-center"></div>
   </main>
 
   <!-- Modal -->
