--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--TODO REVISAR POR QUE NO SE CENTRA EL P DE FAVORITOS VACIOS-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Favoritos - RAWG Games Explorer</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Favoritos - RAWG Games Explorer</title>
+    <link rel="stylesheet" href="/src/css/styles.css" />
+  </head>
 
-  <link rel="stylesheet" href="/src/css/styles.css">
-</head>
+  <body>
+    <header>
+      <section class="header-nav">
+        <div class="home">
+          <a href="../index.html"
+            ><img src="../../public/assets/hogar.png" alt="Home" />Home</a
+          >
+        </div>
+      </section>
+      <section class="header-filters">
+        <div class="search-bar">
+          <input type="search" id="searchInput" placeholder="Portal 2" />
+        </div>
+        <div class="filters">
+          <select id="filterPlatform">
+            <option value=""><span></span>Todas las Plataformas</option>
+          </select>
+          <select id="filterGenre">
+            <option value="">Todos los Géneros</option>
+          </select>
+          <button id="sortByName">Ordenar por Nombre</button>
+          <button id="sortByRating">Ordenar por Puntuación</button>
+        </div>
+      </section>
+    </header>
+    <main>
+      <div id="favoritesContainer" class="cards-container text-center"></div>
+    </main>
 
-<body>
-
-  <header>
-    <section class="header-nav">
-      <div class="home">
-        <a href="../index.html"><img src="../../public/assets/hogar.png" alt="Home">Home</a>
+    <!-- Modal -->
+    <div id="modal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="modalBody"></div>
       </div>
-    </section>
-    <section class="header-filters">
-      <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="Portal 2">
-      </div>
-      <div class="filters">
-        <select id="filterPlatform">
-          <option value=""><span></span>Todas las Plataformas</option>
-        </select>
-        <select id="filterGenre">
-          <option value="">Todos los Géneros</option>
-        </select>
-        <button id="sortByName">Ordenar por Nombre</button>
-        <button id="sortByRating">Ordenar por Puntuación</button>
-      </div>
-    </section>
-
-  </header>
-  <main>
-    <div id="favoritesContainer" class="cards-container text-center"></div>
-  </main>
-
-  <!-- Modal -->
-  <div id="modal" class="modal hidden">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <div id="modalBody"></div>
     </div>
-  </div>
 
-  <script type="module" src="/src/js/favorites.js"></script>
-</body>
-
+    <script type="module" src="/src/js/favorites.js"></script>
+  </body>
 </html>
