vite-config-deploy

--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -34,7 +34,7 @@
       </section>
     </header>
     <main>
-      <div id="favoritesContainer" class="cards-container text-center"></div>
+      <div id="favoritesContainer" class="cards-container"></div>
     </main>
 
     <!-- Modal -->
